# data-analytics-learning

./: README.md  build_check.ps1  pyproject.toml
app/: dev.env  local.env  main.py
app/configs/: config.py
app/numpy/basics/: 2d_array.py  indexing_slicing.py  maths_oper_broadcasting.py  matrix_multiplication.py  memory_layout.py
app/numpy/pandas/: series_dataframes.py
app/pandas/: series_dataframes.py  students.json  students_output.json
app/utilities/: database.py
