[project]
name = "app"
version = "0.1.0"
description = "Basic Python project for Data Analytics learning"
authors = [
    {name = "Rahul Soni",email = "rahulsoni.myventures@gmail.com"}
]
license = {text = "Open-Source"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.120.0", # The web framework for controllers/routes
    "uvicorn>=0.36.0",  # The ASGI server to run the app
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "numpy>=2.2.0,<2.3.0",
    "pandas (>=2.2.0,<2.3.0)",
    "matplotlib>=3.8.0,<3.10.0"
]

packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.10"
isort = "^5.12"  # Added for import checking
mypy = "^1.7"    # Added for static type checking

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
